--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -1,4 +1,4 @@
-name: gitleaks
+name: Scan hardcoded secrets with Gitleaks
 on:
   pull_request:
   push:
@@ -7,7 +7,7 @@ on:
     - cron: "0 4 * * *" # run once a day at 4 AM
 jobs:
   scan:
-    name: gitleaks
+    name: Gitleaks
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
