--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -1,10 +1,23 @@
 name: Scan hardcoded secrets with Gitleaks
 on:
   pull_request:
+    paths-ignore:
+    - 'README.md'
+    - '.md'
+    branches:
+      - main       
   push:
-  workflow_dispatch:
+    paths-ignore:
+    - 'README.md'
+    - '.md'
+    branches:
+      - main
+  workflow_dispatch:  
+   
   schedule:
     - cron: "0 4 * * *" # run once a day at 4 AM
+  
+
 jobs:
   scan:
     name: Gitleaks
